# algebratrio

./: Determinante.py  MagnitudVector.py  ProductoEscalar.py  README.md  SumaMatrices.py  SumaVectores.py
LibreriaAlgebra/: pyproject.toml
LibreriaAlgebra/src/algebraIA/: __init__.py  mi_modulo.py
LibreriaAlgebra/test/: testdetest.py
